# AlgorithmsItmoTask

./: .gitignore  README.md  pyproject.toml  requirements.txt  task_eight.ipynb  task_five.py  task_six.py  task_three.ipynb  task_two.ipynb
