[tool.poetry]
name = "algorithmsitmotaskthree"
version = "0.1.0"
description = ""
authors = ["Chumakov Mikhail <mikhail.ch2011@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
numpy = "^1.23.3"
pandas = "^1.4.4"
plotly = "^5.10.0"
scipy = "^1.9.1"
dash = "^2.6.2"
dash-cytoscape = "^0.3.0"
requests = "^2.28.1"
networkx = "^2.8.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
